Fixing header menu issues on iPhone

--- a/docroot/sites/all/themes/ambitious/sass/layouts/header.scss
+++ b/docroot/sites/all/themes/ambitious/sass/layouts/header.scss
@@ -847,7 +847,7 @@ nav {
       }
     }
     @include breakpoint($mobile) {
-      max-width:90%;
+      max-width:92%;
       float:inherit;
       text-align:initial;
     }
